# VGKit

./: AGENTS.md  Readme.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
examples/: complex_example.py
test/: test_grid_remove_scaling.py  test_visual_grid_remove_scaling.py
test/manual_integration_tests/: simple_example_standard_tkinter.py  test_all_widgets_with_colors.py  test_button_antialiasing.py  test_configure_dimensions.py  test_ctk_toplevel.py  test_filedialog.py  test_font.py  test_optionmenu_combobox.py  test_progressbar_intermediate_mode.py  test_scrollable_frame.py  test_segmented_button.py  test_states.py  test_tabview.py  test_textbox.py  test_theme_colors.py  test_ttk_frames.py  test_variables.py
test/manual_integration_tests/test_ctk_behavior/: test_ctk_appearance_mode_change.py  test_ctk_iconify_at_beginning.py  test_ctk_withdraw_at_beginning.py  test_ctk_zoomed_state.py
test/manual_integration_tests/test_ctk_toplevel_behavior/: test_ctk_toplevel_appearance_mode_change.py  test_ctk_toplevel_iconify_at_beginning.py  test_ctk_toplevel_withdraw_at_beginning.py  test_ctk_toplevel_zoomed_state.py
test/manual_integration_tests/test_scaling/: test_scaling_simple_place.py  test_scaling_toplevel_pack.py
test/unit_tests/: test_all.py  test_ctk.py  test_ctk_toplevel.py
vgkit/: __init__.py
vgkit/assets/themes/: blue.json
vgkit/windows/: ctk_input_dialog.py  ctk_tk.py  ctk_toplevel.py
vgkit/windows/widgets/: __init__.py  ctk_button.py  ctk_checkbox.py  ctk_combobox.py  ctk_entry.py  ctk_frame.py  ctk_label.py  ctk_optionmenu.py  ctk_progressbar.py  ctk_radiobutton.py  ctk_scrollable_frame.py  ctk_scrollbar.py  ctk_segmented_button.py  ctk_slider.py  ctk_switch.py  ctk_tabview.py  ctk_textbox.py  vgk_button.py  vgk_frame.py  vgk_label.py  vgk_treeview.py
vgkit/windows/widgets/appearance_mode/: appearance_mode_base_class.py  appearance_mode_tracker.py
(+14 files in other folders)
